# simple9

./: .gitignore  CMakeLists.txt  Makefile  bitlenthsvselectors.m  bitwidthvsselector.txt  bitwidthvsselectorall.txt  bitwise.c  compress.c  compress.h  compressionstats.c  compressionstatsdesign.txt  findbestselectors.c  flexarray.c  flexarray.h  fls.h  getrands.sh  getshufflednums.sh  lengthfreqs.txt  lengthstats.m  list445139.csv  list445139.txt  list445139bitwidths.csv  list96.csv  list96.txt  list96bitwidths.csv  list96wbperselector.csv  listlengths.m  liststats.c  liststats.m  mylib.c  mylib.h  notsimple9.c  permutations.c  permutations.h  plotlist445139.m  plotlist96.m  realdatastats.c  rosetta_boothroyd.c  simd.c  simple9-broken.c  (+8 more)
